--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,7 +3,7 @@
 	<div class="row">
 		<div class="col-md-10 col-md-offset-1">
 			<form action = "{{url_for('display_videos')}}" method = "POST" enctype = "multipart/form-data">
-				<input type = "file" name = "file" />
+				<input type = "file" name = "file" accept="image/*"/>
 				<button type = "submit" class="btn btn-default">
 					Submit
 				</button>
