--- a/templates/video.html
+++ b/templates/video.html
@@ -3,7 +3,7 @@
 
 	<div class="row top-menu">
 		<div class="col-md-6">
-			<a href="{{url_for('display_videos')}}">
+			<a href="{{url_for('landing')}}">
 				<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
 				Try Another Picture
 			</a>
