Added youtube video for emotion

--- a/templates/video.html
+++ b/templates/video.html
@@ -23,4 +23,12 @@
 		</div>
 	</div>
 
+	<div class="row banner main">
+		<div class="col-md-5">
+		</div>
+		<div class="col-md-7 padding-none">
+			<iframe width="640" height="390" src="{{video_urls[0]}}" frameborder="1"></iframe>
+		</div>
+	</div>
+
 {% endblock %}
