--- a/templates/main.html
+++ b/templates/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-		<!-- <link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/styles.css') }}"> -->
+		<link rel=stylesheet type=text/css href="{{ url_for('static', filename='css/styles.css') }}">
 	</head>
 
 	<body>
