--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,7 +1,24 @@
 {% extends "main.html" %}
 {% block content %}
-	<div class="row">
-		<div class="col-md-10 col-md-offset-1">
+
+	<div class="row divider blue">
+		<div class="col-md-12">
+		</div>
+	</div>
+
+	<div class="row row-centered banner menu">
+		<div class="col-lg-6 col-centered padding-none">
+				<h1>Upload Your Photo Here</h1>
+		</div>
+	</div>
+
+	<div class="row divider blue">
+		<div class="col-md-12">
+		</div>
+	</div>
+
+	<div class="row row-centered">
+		<div class="col-md-2 col-centered">
 			<form action = "{{url_for('display_videos')}}" method = "POST" enctype = "multipart/form-data">
 				<input type = "file" name = "file" accept="image/*"/>
 				<button type = "submit" class="btn btn-default">
